# mcp-psycopg2

./: .bumpversion.cfg  CHANGELOG.md  README.md  SKILL.md  SPEC.md  mcp.json  pyproject.toml  server.json
.github/workflows/: pypi-publish.yml
src/mcp_psycopg2/: __init__.py  __main__.py  _server.py
tests/: conftest.py  test_server.py
